<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.elad.gamaepsilonapp.MainPage"
    android:background="@android:color/holo_blue_light">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="78dp"
        android:id="@+id/nameText"
        android:text="@string/name_text"
        android:gravity="right"
        android:textDirection="rtl"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        tools:ignore="RtlHardcoded" />

    <Button
        android:text="@string/open_paka_butt"
        android:layout_height="wrap_content"
        android:id="@+id/openPakaButton"
        android:layout_below="@+id/nameText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_width="140dp"
        android:backgroundTint="@android:color/holo_red_light"
        tools:targetApi="lollipop" />

    <Button
        android:text="@string/search_butt"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/openPakaButton"
        android:id="@+id/searchButton"
        android:backgroundTint="@android:color/holo_red_light"
        tools:targetApi="lollipop" />

    <Button
        android:text="@string/managment_butt"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/searchButton"
        android:layout_alignStart="@+id/searchButton"
        android:layout_marginTop="47dp"
        android:id="@+id/managmentButton"
        android:backgroundTint="@android:color/holo_red_light"
        tools:targetApi="lollipop" />

</RelativeLayout>
