<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.elad.gamaepsilonapp.addRemoveSupervisor">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="1136dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo"
        tools:ignore="ContentDescription,MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/addRemoveSupervisorText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/add_remove_supervisor_text"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:textDirection="firstStrongRtl"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@+id/logoImage"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/supervisorName"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="34dp"
        android:background="@drawable/edittext_drawable"
        android:ems="10"
        android:hint="@string/supervisor_name"
        android:inputType="textPersonName"
        android:layout_below="@+id/addRemoveSupervisorText"
        android:layout_alignStart="@+id/logoImage" />

    <EditText
        android:id="@+id/workPlace"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:background="@drawable/edittext_drawable"
        android:ems="10"
        android:hint="@string/work_place"
        android:inputType="textPersonName"
        android:layout_marginStart="91dp"
        android:layout_alignBaseline="@+id/supervisorName"
        android:layout_alignBottom="@+id/supervisorName"
        android:layout_toEndOf="@+id/supervisorName" />

    <Button
        android:id="@+id/addSupervisorButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/workPlace"
        android:backgroundTint="@android:color/holo_red_light"
        android:textStyle="bold"
        android:layout_marginStart="248dp"
        android:layout_toEndOf="@+id/workPlace"
        android:text="@string/add_supervisor_button"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/supervisorListText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/addSupervisorButton"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:textDirection="firstStrongRtl"
        android:textStyle="bold"
        android:layout_marginTop="68dp"
        android:text="@string/supervisor_list_text" />

    <ListView
        android:id="@+id/supervisorListView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_below="@+id/supervisorListText"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
