<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.elad.gamaepsilonapp.LoginPage"
    android:backgroundTint="@android:color/holo_blue_light"
    android:background="@android:color/holo_blue_light"
    android:backgroundTintMode="src_over"
    tools:targetApi="lollipop">

    <EditText
        android:layout_width="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/userNameText"
        android:hint="@string/username_text"
        android:gravity="right"
        android:background = "@drawable/edittext_drawable"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordText"
        android:hint="@string/password_text"
        android:elevation="0dp"
        android:textDirection="firstStrongRtl"
        android:gravity="right"
        android:background="@drawable/edittext_drawable"
        android:layout_below="@+id/userNameText"
        android:layout_alignStart="@+id/userNameText"
        android:layout_marginTop="20dp"
        tools:ignore="RtlHardcoded" />

    <Button
        android:text="@string/accept_butt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/acceptButton"
        android:layout_below="@+id/passwordText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="@android:color/holo_red_light" />
</RelativeLayout>
